# programs

./: 1.txt  2.txt  README.md  base.py  lab4_2.c  lab5_2.c  lefty.py  mergesort.py  results.txt  sort.c  text.docx
Laboratornaya №10/: main.c
Laboratornaya №2/: lab2.3.c  lab_2.2.c
Laboratornaya №4/: lab4_1.c  lab4_2.c
Laboratornaya №5/: lab5_1.c
Laboratornaya №6/: lab6_1.c  labr6.1
Laboratornaya №7/: lab7_1.c
Laboratornaya№10/: parallelepiped.c  parallelepiped.h
Laboratornaya№8/: lab8_1.c  lab8u.c
Laboratornaya№9/: lab9  lab9.c
s2 Laboratornaya 1/: 1.c  readme.docx  readme.txt  Имена.txt
s2.RGR prog/: test.py
s2Laboratornaya2/: 1.c
s2Laboratornaya4/: 2.c  for1.txt
s2laboratornaya5/: 1.c
s2laboratornaya6/: CMakeLists.txt  main.c  student.c  student.h  student_app  Имена.txt
s2laboratornaya7/: 1.c
s2laboratornaya8/src/: bit_utils.cpp
s2laboratornaya8/test/: test_bit_utils  test_bit_utils.c
